--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,3 +1,8 @@
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,500,300' rel='stylesheet' type='text/css'> 
+    
 <% @conversations.each do |conversation| %>
 <p class="single-chat">
   <br></br>
